# bevy_query_service

./: Cargo.toml  README.md
examples/: query_client.rs  request_cleaner.rs  request_with_parent.rs  request_with_query.rs  request_with_world.rs  simple_request.rs  two_request_one_reply.rs
src/: lib.rs
src/structs/: mod.rs
src/systems/: mod.rs
src/traits/: mod.rs
