[package]
name = "bevy_query_service"
version = "0.2.0"
description = "A simple crate that helps with querying components as a service in Bevy"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy_app = "0.15.1"
bevy_ecs = "0.15.1"
bevy_hierarchy = "0.15.1"
bevy_log = "0.15.1"
bevy_time = "0.15.1"
uuid = "1.12.1"

[dev-dependencies]
bevy = "0.15.1"
bevy_egui = "0.32.0"
rand = "0.9.0"
